# SCA-File

./: CMakeLists.txt  README.md  main.cpp
files_for_tests/: dataToRead.txt  nowyPlik.txt  readOnlyFile.txt
googletest/googlemock/scripts/generator/: LICENSE
googletest/googletest/src/: gtest-death-test.cc
include/: Exceptions.h  File.h  FileImpl.h
src/: Exceptions.cpp  FileImpl.cpp
tests/: FileImplTests.cpp  MainTest.cpp
